# GravityRooms

./: ::q  .gitignore  BuildAndRun.sh  CMakeLists.txt  README.md  aq  arquivos_git.txt  build.sh  dados_salvos.json  debug.sh  identadorAutomatico.sh  instalador.sh  new_name  run.sh  save.json  save.txt
UML/Atual/: 1.mdj  2.mdj  3.mdj  4.mdj  5.mdj
arquivosEntrega/: GravityRooms.docx  Requisitos OS.txt  UML.mdj
assets/: mapa.txt  mapa2.txt  mapa3.txt
game/: GravityRooms  Makefile  Projetil.cpp  Projetil.h  ente.cpp  ente.h  gerenciador_colisoes.h  gerenciador_grafico.cpp  gerenciador_grafico.h  gravityrooms.cpp  lists.h  main.cpp  stdafx.h  tree
game/files/: gerenciador_colisoes.cpp  gerenciador_colisoes.h  gerenciador_grafico.cpp  gerenciador_grafico.h
game/include/: ente.h  gerenciador_grafico.h  jogo.h  mimico.h
game/old/: ARQUIVOMODELO_H  gerenciador_colisoes.cpp
game/src/: ARQUIVOMODELO_CPP  ente.cpp  gerenciador_grafico.cpp  jogo.cpp  main.cpp  mimico.cpp
include/: IDs.hpp  dados.h  ente.h  gravity_rooms.h  menu.h  stdafx.h
include/Engine/: gerenciador_colisoes.h
include/Entidades/: background.h  entidade.h  projetil.h
include/Fases/: fase.h  laboratorio.h  nave.h
include/Game/: elemento.h
include/Gerenciadores/: arquivo.h  camera.h  gerenciador_arquivos.h  gerenciador_colisoes.h  gerenciador_estado.h  gerenciador_eventos.h  gerenciador_fisico.h  gerenciador_grafico.h  gerenciador_input.h  ranking.h  (+6 more)
saves/: rank.json  ranking.json  save.json  save_game.json
src/: ente.cpp  gravity_rooms.cpp  main.cpp  menu.cpp
teste/: Joguinho  executar.sh  game  jogo  main.cpp  teste.cpp
(+121 files in other folders)
